# ChangeLog for dev-util/bnfc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/ChangeLog,v 1.11 2009/03/26 21:26:49 kolmodin Exp $

  26 Mar 2009; Lennart Kolmodin <kolmodin@gentoo.org> bnfc-2.4_beta.ebuild:
  Add missing dep dev-haskell/mtl.
  Spotted and patched by Maciej Zielenkiewicz <mzielenkiewicz@gmail.com>.
  See bug #263904.

*bnfc-2.4_beta (09 Feb 2009)

  09 Feb 2009; Lennart Kolmodin <kolmodin@gentoo.org> +bnfc-2.4_beta.ebuild:
  Bump version. Should work better with the more recent toolchains.

  07 Jul 2008; Lennart Kolmodin <kolmodin@gentoo.org> bnfc-2.1.2.ebuild,
  bnfc-2.2.ebuild:
  Changed virtual/tetex dependency into virtual/latex-base, see #222501.
  Make sure the pdf doesn't get compressed.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Andres Loeh (kosmikus, #200333) from metadata.xml.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> bnfc-2.1.2.ebuild,
  bnfc-2.2.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  17 Oct 2006; Duncan Coutts <dcoutts@gentoo.org> bnfc-2.2.ebuild:
  Need to inherit eutils eclass.

  11 Oct 2006; <kolmodin@gentoo.org> +files/bnfc-2.2-ghc66-utf8.patch,
  bnfc-2.1.2.ebuild, bnfc-2.2.ebuild:
  Made bnfc-* compatible with dev-lang/ghc-6.6

*bnfc-2.2 (08 Oct 2005)

  08 Oct 2005; Andres Loeh <kosmikus@gentoo.org> +bnfc-2.2.ebuild:
  New version. Ebuild kindly provided by Lennart Kolmodin.

  03 May 2005; David Holm <dholm@gentoo.org> bnfc-2.1.2.ebuild:
  Added to ~ppc.

  11 Nov 2004; Michael Sterrett <mr_bones_@gentoo.org> bnfc-2.1.2.ebuild:
  fix use invocation

*bnfc-2.1.2 (26 Oct 2004)

  26 Oct 2004; Andres Loeh <kosmikus@gentoo.org> bnfc-2.1.2.ebuild,
  metadata.xml:
  Initial import, as suggested in bug #54750.
