@@ -5,15 +5,15 @@ AUX bnfc-2.2-ghc66-utf8.patch 3184 RMD160 0ccb7f475edf7e76d6c6a80b4c0aa0cf3061c8
 DIST BNFC-2.4b.tgz 1073563 RMD160 cb0780094a7b1eb3b3380ae4af84cb02f800188a SHA1 48e91bd564fa78a7ad242cfe8c36e8020b9346aa SHA256 fba3ae8546f37bed3ca224db336e6417b5ead442570f09e15be0507334c01772
 DIST BNFC_2.2.tgz 264246 RMD160 5f1055fc45916eb489e7f1628dc24c5ecb153500 SHA1 bea787e54baa8dcfdab4c0dd38561558a5c895a8 SHA256 8f035b5d0850d5010a0c754f360a9f91cfab526b8b5cf4b61c207b89223c3a33
 DIST bnfc_2.1.2.tgz 113340 RMD160 b4975061ada09df109bb657f27c9181fd06f868b SHA1 465a28ae694f8e03b2653726a780f2ae6fba7a6d SHA256 a45cd22d727c9246fca31d580f42a3e2aa8bed4e094f8d608f7fe0d38c167eb1
-EBUILD bnfc-2.1.2.ebuild 811 RMD160 4b7d08bc87118f8f8079d5ba64fed3c4b4315e80 SHA1 3e232eabb8348e2fb385b7ca83cd52dd14881046 SHA256 a09318a2384e8a5b2a434560b2ea66723f0f7a79b960a9be2e744486809c76a9
-EBUILD bnfc-2.2.ebuild 981 RMD160 74c021f07a67322db3b05b5f31212af5d9c5aec2 SHA1 0d2dc9cb0c49071c0296cb0bbcb0d47a666d6a4d SHA256 b357c2694c43f2921f0a8f0db87dddf71d4d61d293359e91480702c1f96ce210
-EBUILD bnfc-2.4_beta.ebuild 1032 RMD160 06670e863efde90e1d254c77b48dffef60eb7508 SHA1 f3b7eef921343ae55352bdf88744002cc60c0951 SHA256 a180df12b214bbb805fe6ff9cb420ab387c414cb7fe2e99d7dc81f7cb4651b67
-MISC ChangeLog 1800 RMD160 9f8d6386c28b4a376a10ba77c93d71dd874d23df SHA1 1e7034573b03a9bd7f70bfa12bcc190ae695826a SHA256 67d6a1dcc2dc50bf54f7546a38f9ac3087ee5bdbd4732b8dddef12c47667c936
+EBUILD bnfc-2.1.2.ebuild 839 RMD160 2de5c095f433a150298f0d96a182fc13912da8e0 SHA1 e671a90b43ef5d48c2201ff153769b352cf8a1af SHA256 fe13189419331b3c6bef6319737eb6595d9073c9a977241b6bf37da66513d64c
+EBUILD bnfc-2.2.ebuild 1031 RMD160 24cfbcbbcd42086a711e72180fd7904c46f715bd SHA1 718f7663a6e3e063121d9220adc758b156db7548 SHA256 1954205d24c3cff1d59bcbb5615450e8dcd5d50d77c78aa16c233f1f919e1bdb
+EBUILD bnfc-2.4_beta.ebuild 1082 RMD160 6b80bce821bae8e6c1545ace9b6223758a3dd51d SHA1 fb44716f7941580a3a605dfee596ec68e911f94b SHA256 4319ce9636cd55fc0080984b1a33fb582dbd081eae0a685fdc64e887d0c6f5b1
+MISC ChangeLog 2054 RMD160 a1410741028d4a5c5509ae48e29da0f5ceb0cccf SHA1 9184031f05b8b86853187ac105bb0dce5faa718b SHA256 a79ad9370a6d79475ff115e967c5f9bbdcf6284721591e3e701608145d452402
 MISC metadata.xml 161 RMD160 f485b248c733c0ef48ebe461e56d10631182864d SHA1 e3539af233f1a90c2470823747cae37ab10d5b2e SHA256 f560c0c2c8a2f2ca3c0c03e1836e16da7085b32ea60e03d9add5e405dac9f004
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.10 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAknL8sMACgkQ1n/CYbXjntLD8gCgmaDacQcjR2zNhgyR2q9zCgeo
-yEkAn1DAmNbOT/G97L9LLQpGPxkpGtWG
-=Go88
+iEYEARECAAYFAkp0O5YACgkQ1n/CYbXjntL6CQCfXGbNcXv/MChtn8p64h72VADV
+bKEAn26YaxwStXqnvYMnEfjWdXswPUnv
+=vRHV
 -----END PGP SIGNATURE-----
