@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/bnfc-2.1.2.ebuild,v 1.6 2008/07/07 18:44:24 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/bnfc-2.1.2.ebuild,v 1.7 2009/08/01 12:56:44 kolmodin Exp $
 
 DESCRIPTION="BNF Converter -- a sophisticated parser generator"
 HOMEPAGE="http://www.cs.chalmers.se/~markus/BNFC/"
@@ -11,8 +11,7 @@ KEYWORDS="~x86 ~ppc"
 
 IUSE="doc"
 
-DEPEND=">=dev-lang/ghc-6.2
-	!>=dev-lang/ghc-6.6
+DEPEND="<dev-lang/ghc-6.6
 	doc? ( virtual/latex-base )"
 
 RDEPEND="virtual/libc"
@@ -27,8 +26,8 @@ src_install() {
 	dobin bnfc
 	if use doc ; then
 		cd doc
-		pdflatex LBNF-report.tex
-		pdflatex LBNF-report.tex
+		VARTEXFONTS="${T}"/fonts pdflatex LBNF-report.tex
+		VARTEXFONTS="${T}"/fonts pdflatex LBNF-report.tex
 		insinto "/usr/share/doc/${P}"
 		doins LBNF-report.pdf
 	fi
