@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/bnfc-2.4_beta.ebuild,v 1.2 2009/03/26 21:26:49 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/bnfc-2.4_beta.ebuild,v 1.3 2009/08/01 12:56:44 kolmodin Exp $
 
 inherit base ghc-package eutils
 
@@ -31,8 +31,8 @@ src_compile() {
 	emake GHC="$(ghc-getghc) -O" || die "emake failed"
 	if use doc ; then
 		cd doc
-		pdflatex LBNF-report.tex
-		pdflatex LBNF-report.tex
+		VARTEXFONTS="${T}"/fonts pdflatex LBNF-report.tex
+		VARTEXFONTS="${T}"/fonts pdflatex LBNF-report.tex
 	fi
 }
 
