@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bnfc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/ChangeLog,v 1.11 2009/03/26 21:26:49 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bnfc/ChangeLog,v 1.12 2009/08/01 12:56:44 kolmodin Exp $
+
+  01 Aug 2009; Lennart Kolmodin <kolmodin@gentoo.org> bnfc-2.1.2.ebuild,
+  bnfc-2.2.ebuild, bnfc-2.4_beta.ebuild:
+  Fixed latex issues mentioned in bug #223077, although they probably won't
+  happen for this ebuild, and ghc dependency trouble in 2.1.2.
 
   26 Mar 2009; Lennart Kolmodin <kolmodin@gentoo.org> bnfc-2.4_beta.ebuild:
   Add missing dep dev-haskell/mtl.
